# photo_editor

./: README.md
photoeditor/: CMakeLists.txt  main.c
photoeditor/filters/inc/: bmp_process.h  edge_detection.h  filters_errors.h  gaussian_blur.h  grayscale.h  kernel.h  laplace.h  sobel.h
photoeditor/filters/src/: bmp_process.c  edge_detection.c  gaussian_blur.c  grayscale.c  kernel.c  laplace.c  sobel.c
photoeditor/inc/: bmp_loader.h  filters.h  types.h
photoeditor/src/: bmp_loader.c
